showing only custom fields marked with "used as filter"

--- a/app/views/projects/_show_project_filters_custom_fields.html.erb
+++ b/app/views/projects/_show_project_filters_custom_fields.html.erb
@@ -2,7 +2,7 @@
   <h3><%= l(:label_section_project_filtering) %></h3>
 
   <div class="filtering_role">
-	<% ProjectCustomField.all.each do |custom_field| %>
+	<% ProjectCustomField.visible.where(:is_filter => true).each do |custom_field| %>
 	  <p><label><%= h(custom_field.name) %></label> <%= custom_field_tag_for_bulk_edit('project', custom_field, Project.all) %></p>
 	<% end %>
   </div>
